<resources xmlns:http="http://schemas.android.com/tools">
    <string name="app_name">HKUCSMSC</string>
    <string name="title_about">About</string>
    <string name="title_admission">Admission</string>
    <string name="title_newsevents">NewsEvents</string>
    <string name="title_curriculum">Curriculum</string>
    <string name="title_sturesources">Resources</string>
    <string name="admission_requirements1"><b>Admission Requirements</b>\n</string>
    <string name="admission_requirements2"><b>Eligibility</b>\n</string>
    <string name="admission_requirements3">To be eligible for admission to the programmes, a candidate shall satisfy both the University Entrance Requirements and the Programme Entrance Requirements including but not limited to:\n</string>
    <string name="admission_requirements4"> a.    shall comply with the General Regulations;\n\nb.    shall hold a Bachelor’s degree of this University or a qualification of equivalent standard from this University or another comparable institution accepted for this purpose;\n\nc.    for a candidate who is seeking admission on the basis of a qualification from a university or comparable institution outside Hong Kong of which the language of teaching and/or examination is not English, shall satisfy the University English language requirement applicable to high degrees as prescribed under General Regulation G2(b); and\n\nd.    satisfy the examiners in a qualifying examination if required.</string>
    <string name="admission_requirements5"><b>Regulations</b>\n</string>
    <string name="admission_requirements6">1. General Regulations of The University</string>
    <string name="admission_requirements7">https://www4.hku.hk/pubunit/drcd/files/pgdr2017-18/genreg.pdf\n\n</string>
    <string name="admission_requirements8">2. University\'s Regulations for Taught Postgraduate Curricula:\n</string>
    <string name="admission_requirements9">https://www4.hku.hk/pubunit/drcd/files/pgdr2017-18/tpg-regulations.pdf\n</string>
    <string name="admission_requirements10">3. Degree Regulations of MSc(CompSc) for students admitted to the curriculum in 2017-2018 and thereafter:\n</string>
    <string name="admission_requirements11">http://www.msc-cs.hku.hk/Media/Default/RegulationSyllabus/Regulations_MSc_2017-18.pdf\n</string>
    <string name="admission_requirements12">http://www.msc-cs.hku.hk/Media/Default/RegulationSyllabus/Syllabus_MSc(CompSc)_2018-19.pdf\n</string>
    <string name="admission_requirements13">English Language Proficiency Requirement\n</string>
    <string name="admission_requirements14">Applicants who wish to be admitted on the basis of a qualification from a university or comparable institution outside Hong Kong where the language of teaching and/or examination is not English are required to obtain:\n</string>
    <string name="admission_requirements15">a. a score of 550 or above (paper-based test) or 80 or above (internet-based test) in the Test of English as a Foreign Language (TOEFL).  Applicants who took the TOEFL should request the Educational Testing Service (ETS) to send an official score report to the University directly. For this purpose, the HKU TOEFL code is 9671. Test scores more than two years old will not be accepted; or\n\nb. a minimum overall band of 6 with no subtest lower than 5.5 in the International English Language Testing System (IELTS); or\n\nc. grade C or above in the Overseas General Certificate of Education (GCE); or\n\nd. grade C or above in the International General Certificate of Secondary Education (IGCSE); or\n\ne. grade C or above in the Cambridge Test of Proficiency in English Language;\n</string>
    <string name="admission_requirements16">unless in exceptional circumstances they are exempted from this requirement.\n</string>
    <string name="admission_procedures1"><b>Application Procedures</b></string>
    <string name="admission_procedures2">Applicants can submit their application via the online application system by clicking the following button.\n</string>
    <string name="admission_procedures3">The following supporting documents should be uploaded to the online application system before the application deadline or expiry of your application account (which is valid for four weeks only), whichever is earlier:</string>
    <string name="admission_procedures4">• Graduate transcript(s) with grading system of all tertiary level studies\n\n• Degree certificate(s)\n\n• English Language proficiency test score report, such as TOEFL or IELTS (only for applicants with qualifications from institutions outside Hong Kong where the language of instruction and/or examination is not English)\n\n• Proof of Cumulative Grade Point Average (CGPA) / average grade / average mark\n\n• Official proof of class ranking, if available\n\n• A curriculum vitae (C.V.)</string>
    <string name="admission_procedures5">Applicants are not required to submit original documents during the application stage.  Should an applicant be given an admission offer by the Programme, he/she will receive notification of the need to submit original/certified true copy* of the documents to the MSc(CompSc) Programme Office.\n\nPlease note that documents once submitted will not be returned, and will be destroyed if the application is unsuccessful.\n\n*The University will only ACCEPT originals and copies of the documents that have been duly declared as true copies before a notary public.</string>
    <string name="admission_procedures6">Application Fee\n\n</string>
    <string name="admission_procedures7">The application fee is HK$300 (non-refundable), paid by credit card online.</string>
    <string name="admission_procedures8">Application Timetable\n\n</string>
    <string name="admission_procedures9">To be considered for a round, you must submit a complete application, including all online / mail-in materials by the day of the deadline.\n\nThe results for admission in September are normally available by July of the same year. Hence, applicants who do not hear from the Faculty of Engineering by July 31, 2019 may assume the application to be unsuccessful.\n</string>
    <string name="admission_compositionfees1">Composition Fees\n</string>
    <string name="admission_compositionfees2">The composition fee for each 6 credit-units in MSc(CompSc) is HK$13,000*.  The dissertation, which is equivalent to 24 credits, has a composition fee of HK$52,000*.  The total composition fees are therefore as follows:\n</string>
    <string name="admission_compositionfees3">48 credit-units (8 courses) + dissertation:\n(HK$13,000* x 8) + (HK$52,000*) = HK$156,000*\n</string>
    <string name="admission_compositionfees4">Students who select to study a course from the MSc(ECom and IComp) and MSc(Eng) programmes have to pay HK$13,000* and HK$12,000* respectively per 6-credit course.\n\n* Subject to University approval\n\nFees for enrolled courses are paid on semester basis.  The first instalment of composition fees of 12 credit-units is payable at the time of acceptance of an offer of admission.\n\nGenerally composition fees for cancelled enrolment before specified deadline are not refunded, but can be used to pay for another enrolled course or carried over to the next semester as credit. (Subject to the approval by the University)\n\n</string>
    <string name="admission_compositionfees5">Financial Assistance\n</string>
    <string name="admission_compositionfees6"><i>For Hong Kong Residents\n</i></string>
    <string name="admission_compositionfees7">Some of our courses have been included in the list of reimbursable courses for the Hong Kong Continuing Education Fund (CEF) which provides reimbursement up to HK$10,000 for eligible local students.  More details available at:</string>
    <string name="admission_compositionfees8">http://www.wfsfaa.gov.hk/cef/index.htm\n\n</string>
    <string name="admission_compositionfees9"><i>For PRC Candidates\n</i></string>
    <string name="admission_compositionfees10">PRC students who have successfully applied and been offered a place in the Master of Science in Computer Science as full-time students in Hong Kong have an opportunity to have their composition fees reduced if they apply and are awarded The China Postgraduate Scholarships for Computer Science.\n\nThe maximum number of scholarships for 2019-20 is thirty, with a maximum value of HK$30,000 each.\n\nThe scholarships shall be used to meet part of the composition fees for a full-time programme of studies leading to the degree of Master of Science in Computer Science.\n\nThe scholarships shall be awarded mainly on the basis of academic merits.7\n</string>
    <string name="admission_admission_faq1">1. I am an undergraduate student in the final year. Can I apply your programme?</string>
    <string name="admission_admission_faq2">2. What supporting documents are required?</string>
    <string name="admission_admission_faq3">3. Do I need to post the hardcopy of supporting doucments to HKU during application?</string>
    <string name="admission_admission_faq4">4. Are photocopies of the TOEFL or IELTS reports accepted?</string>
    <string name="admission_admission_faq5">5. Do I need to submit a C.V. or a personal statement?</string>
    <string name="admission_admission_faq6">6. Do I need to submit reference letters? Is there any form for referees?</string>
    <string name="admission_admission_faq7">7. I am an applicant from Mainland China. How do I apply the China Postgraduate Scholarships for Computer Science?</string>
    <string name="admission_admission_faq8">8. How many confidential statements from referee are required if I apply the China Postgraduate Scholarships?</string>
    <string name="admission_admission_faq9">9. When will I know the application results?</string>
    <string name="curriculum_courses1">Programme Overview</string>
    <string name="curriculum_courses2">The MSc(CompSc) programme is a comprehensive postgraduate study programme provides advanced and in-depth learning in Computer Science.  The programme is credit unit based, with courses of both applied and fundamental nature.\n\nStudents can choose focussed streams of study or a comprehensive and diversified study in Computer Science, i.e. the General Stream.\n\nFocussed streams of study represent a cohesive collection of related courses that provides both fundamental and in-depth exposure to students in a given ICT domain.  Students can extend and deepen their knowledge in the specialization streams in Cyber Security, Multimedia Computing and Financial Computing.\n </string>
    <string name="curriculum_courses3">Stream of Study</string>
</resources>