<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_admission"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_admission" />

    <item
        android:id="@+id/navigation_curriculum"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/title_curriculum" />

    <item
        android:id="@+id/navigation_newsevents"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_newsevents" />

    <item
        android:id="@+id/navigation_sturesources"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_sturesources" />

</menu>
