<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/admission_requirements1"
            android:textSize="25dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/smallyellow"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/admission_requirements2"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admission_requirements3"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_requirements4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/admission_requirements5"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_requirements6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:autoLink="web"
            android:text="@string/admission_requirements7"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_requirements8" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:autoLink="web"
            android:text="@string/admission_requirements9"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_requirements10" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:autoLink="web"
            android:text="@string/admission_requirements11"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:autoLink="web"
            android:text="@string/admission_requirements12"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/admission_requirements13"
            android:textSize="18dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:lineSpacingExtra="6dp"
            android:autoLink="web"
            android:text="@string/admission_requirements14"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_requirements15"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:lineSpacingExtra="6dp"
            android:autoLink="web"
            android:text="@string/admission_requirements16"/>

        <include layout="@layout/bottom_info" />
    </LinearLayout>
</ScrollView>