<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/admission_compositionfees1"
            android:textSize="25dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/smallyellow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_compositionfees2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_compositionfees3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_compositionfees4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/admission_compositionfees5"
            android:textSize="25dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/smallyellow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_compositionfees6" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_compositionfees7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginLeft="25dp"
            android:autoLink="web"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_compositionfees8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_compositionfees9" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_compositionfees10" />


        <include layout="@layout/bottom_info" />
    </LinearLayout>
</ScrollView>