<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/admission_procedures1"
            android:textSize="25dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/smallyellow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_procedures2" />

        <Button
            android:id="@+id/admission_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#26A69A"
            android:text="      APPLY NOW      "
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_procedures3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_procedures4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_procedures5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/admission_procedures6"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_procedures7" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/admission_procedures8"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="323dp"
            android:layout_height="94dp"
            android:layout_gravity="center"
            android:src="@drawable/applytimetable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/admission_procedures9" />
        <include layout="@layout/bottom_info" />
    </LinearLayout>
</ScrollView>