<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/admission_faq_admission1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admission_admission_faq1" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/admission_faq_admission2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admission_admission_faq2"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/admission_faq_admission3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admission_admission_faq3"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/admission_faq_admission4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admission_admission_faq4"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/admission_faq_admission5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admission_admission_faq5"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/admission_faq_admission6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admission_admission_faq6"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/admission_faq_admission7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admission_admission_faq7"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/admission_faq_admission8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admission_admission_faq8"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/admission_faq_admission9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admission_admission_faq9"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"/>

    </LinearLayout>

</ScrollView>